Add sgemv and sscal
It's now in use by Spark.